Bug 819741.  Add support for passing an ArrayBufferView to XHR.send().  r=sicking,bent